--- a/web/themes/custom/citizen_dart/components/05-assembly/global/_site-styles.scss
+++ b/web/themes/custom/citizen_dart/components/05-assembly/global/_site-styles.scss
@@ -12,8 +12,9 @@
 }
 
 .overflow-guard{
-	overflow: hidden;
+	overflow-x: hidden;
 	background: $siteBack;
+  width: 100%;
 	.unpublished &{
 		background: $unpub;
 	}
